--- a/modern.css
+++ b/modern.css
@@ -94,7 +94,7 @@
 }
 
 @media (max-width: 479px) {
-  #chat .msg {
+  #chat .msg[data-type="message"] {
     display: flex !important;
   }
 
